# Hent-ai

./: .gitignore  AGENTS.md  README.md  SKILL.md  package-lock.json  package.json  pnpm-lock.yaml  workspace_isolation.patch
.github/: pull_request_template.md
assets/: channel-overrides.json  manifest.json
cursor/: package-lock.json  package.json  tsconfig.cli.json  tsconfig.json  vitest.config.ts
docs/: agent-runbook.md  channel-profiles.md  classifier-customization.md  conversation-module-completion-spec.md  generation-flow.html  identity-roadmap.md  memory-eval-scaffold.md  service-owned-gates.md  update-flow.md
generate/: README.md  package-lock.json  package.json  tsconfig.json
hermes/: README.md  __init__.py  emotion_rules.py  llm_client.py  plugin.yaml  pyproject.toml  service_adapter.py  test_hermes.py  watcher_adapter.py  watcher_core.py  watcher_llm.py  watcher_runtime.py
hermes/scripts/: set_channel_mode.py
openclaw/: README.md  channel-filter.ts  date-mode.test.ts  date-mode.ts  discord-utils.ts  dynamic-persona.test.ts  dynamic-persona.ts  index.test.ts  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  watcher-adapter.redteam.test.ts  watcher-adapter.test.ts  watcher-adapter.ts  watcher-core.redteam.test.ts  watcher-core.test.ts  watcher-core.ts  watcher-llm.redteam.test.ts  watcher-llm.test.ts  watcher-llm.ts  watcher-shadow-killswitch.test.ts
scripts/: release-gate.mjs  service-owned-boundary-check.mjs
service/: package-lock.json  package.json  tsconfig.json
shared/: db.test.ts  db.ts  (+5 more)
(+117 files in other folders)
