[project]
name = "hent-ai-hermes"
version = "0.1.0"
description = "Hermes Agent plugin entrypoint for Hent-ai emotion media"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["hent-ai", "hermes", "emotion", "plugin"]

[tool.pytest.ini_options]
testpaths = ["../tests/hermes"]
addopts = "-v"
